Update build system: Remove useless things and add some modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,27 +9,19 @@
 cmake_minimum_required (VERSION 2.8)
 project (aurorafw)
 
+message(STATUS "Starting framework build system...")
 message("┌─┐┬ ┬┬─┐┌─┐┬─┐┌─┐  ┌─┐┬─┐┌─┐┌┬┐┌─┐┬ ┬┌─┐┬─┐┬┌─ | Powerful, Scalable and Cross Platform Framework")
 message("├─┤│ │├┬┘│ │├┬┘├─┤  ├┤ ├┬┘├─┤│││├┤ ││││ │├┬┘├┴┐ | @author Luís Ferreira")
 message("┴ ┴└─┘┴└─└─┘┴└─┴ ┴  └  ┴└─┴ ┴┴ ┴└─┘└┴┘└─┘┴└─┴ ┴ | @license GNU Public License v3")
-#message(STATUS "Aurora Framework is building...")
 
-# Check for dependencies
-find_package(PkgConfig REQUIRED)
-find_package(glfw3 3.2 REQUIRED)
-find_package(OpenGL REQUIRED)
-find_package(GLEW REQUIRED)
-find_package(OpenAL REQUIRED)
-find_package(Vulkan)
-find_package(CUDA)
-
-pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
-
+#General Flags
 if (NOT CONFIGURED_ONCE)
     add_definitions(-DAURORA_IS_COMPILING)
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -std=c++14")
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -Wextra -std=c++14")
-    set(ROOT_DIR .)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og -g3 -Wall -Wextra -w -std=c++17")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g0 -std=c++17")
+    set(ROOT_DIR ${CMAKE_SOURCE_DIR}/..)
+    set(BUILD_DIR ${ROOT_DIR}/build)
+    set(MODULES_DIR ${ROOT_DIR}/module)
     if(CMAKE_BUILD_TYPE MATCHES Debug)
         set(LIBRARY_OUTPUT_PATH ${ROOT_DIR}/bin/dbg)
         set(EXECUTABLE_OUTPUT_PATH ${ROOT_DIR}/bin/dbg)
@@ -39,24 +31,18 @@ if (NOT CONFIGURED_ONCE)
     endif()
 endif()
 
-if(CUDA_FOUND)
-    add_definitions(-DAURORA_NVIDIA_CUDA_FOUND)
-endif()
-if(OPENGL_FOUND)
-    add_definitions(-DAURORA_OPENGL_FOUND)
-endif()
-if(OPENGL_XMESA_FOUND)
-    add_definitions(-DAURORA_OPENGL_XMESA_FOUND)
-endif()
-if(OPENGL_GLU_FOUND)
-    add_definitions(-DAURORA_OPENGL_GLU_FOUND)
-endif()
-if(Vulkan_FOUND)
-    add_definitions(-DAURORA_VULKAN_FOUND)
-endif()
+include_directories(${BUILD_DIR}/include)
 
-include_directories(${ROOT_DIR}/build/include)
-include_directories(${GTK3_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
+# Modules
+set(MODULE_MATH_DIR ${MODULES_DIR}/math)
+include(${MODULE_MATH_DIR}/module.cmake MODULE_MATH_DIR)
 
-link_directories(${GTK3_LIBRARY_DIRS})
-add_definitions(${GTK3_CFLAGS_OTHER})
+#Graphics Engine
+set(MODULE_GENGINE_CORE_DIR ${MODULES_DIR}/gengine/core)
+include(${MODULE_GENGINE_CORE_DIR}/module.cmake MODULE_GENGINE_CORE_DIR)
+set(MODULE_GENGINE_OPENGL_DIR ${MODULES_DIR}/gengine/opengl)
+include(${MODULE_GENGINE_OPENGL_DIR}/module.cmake MODULE_GENGINE_OPENGL_DIR)
+set(MODULE_GENGINE_VULKAN_DIR ${MODULES_DIR}/gengine/vulkan)
+include(${MODULE_GENGINE_VULKAN_DIR}/module.cmake MODULE_GENGINE_VULKAN_DIR)
+
+message(STATUS "Build system loaded")
