Update build system: Add some modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ if (NOT CONFIGURED_ONCE)
     set(ROOT_DIR ${CMAKE_SOURCE_DIR}/..)
     set(BUILD_DIR ${ROOT_DIR}/build)
     set(MODULES_DIR ${ROOT_DIR}/module)
+    set(APPS_DIR ${ROOT_DIR}/apps)
     if(CMAKE_BUILD_TYPE MATCHES Debug)
         set(LIBRARY_OUTPUT_PATH ${ROOT_DIR}/bin/dbg)
         set(EXECUTABLE_OUTPUT_PATH ${ROOT_DIR}/bin/dbg)
@@ -40,6 +41,16 @@ set(MODULE_CRYPTO_DIR ${MODULES_DIR}/crypto)
 include(${MODULE_CRYPTO_DIR}/module.cmake MODULE_CRYPTO_DIR)
 set(MODULE_TLIB_DIR ${MODULES_DIR}/tlib)
 include(${MODULE_TLIB_DIR}/module.cmake MODULE_TLIB_DIR)
+set(MODULE_IO_DIR ${MODULES_DIR}/io)
+include(${MODULE_IO_DIR}/module.cmake MODULE_IO_DIR)
+set(MODULE_CLI_DIR ${MODULES_DIR}/cli)
+include(${MODULE_CLI_DIR}/module.cmake MODULE_CLI_DIR)
+set(MODULE_GUI_DIR ${MODULES_DIR}/gui)
+include(${MODULE_GUI_DIR}/module.cmake MODULE_GUI_DIR)
+set(MODULE_CORE_DIR ${MODULES_DIR}/core)
+include(${MODULE_CORE_DIR}/module.cmake MODULE_CORE_DIR)
+set(MODULE_AUDIO_DIR ${MODULES_DIR}/audio)
+include(${MODULE_AUDIO_DIR}/module.cmake MODULE_AUDIO_DIR)
 
 #Graphics Engine
 set(MODULE_GENGINE_CORE_DIR ${MODULES_DIR}/gengine/core)
@@ -48,5 +59,20 @@ set(MODULE_GENGINE_OPENGL_DIR ${MODULES_DIR}/gengine/opengl)
 include(${MODULE_GENGINE_OPENGL_DIR}/module.cmake MODULE_GENGINE_OPENGL_DIR)
 set(MODULE_GENGINE_VULKAN_DIR ${MODULES_DIR}/gengine/vulkan)
 include(${MODULE_GENGINE_VULKAN_DIR}/module.cmake MODULE_GENGINE_VULKAN_DIR)
+set(MODULE_GENGINE_DIRECT3D_DIR ${MODULES_DIR}/gengine/direct3d)
+include(${MODULE_GENGINE_DIRECT3D_DIR}/module.cmake MODULE_GENGINE_DIRECT3D_DIR)
+
+if(CMAKE_BUILD_TYPE MATCHES Debug)
+    set(APP_TESTS_TLIB_DIR ${APPS_DIR}/tests/tlib)
+    include(${APP_TESTS_TLIB_DIR}/app.cmake APP_TESTS_TLIB_DIR)
+    set(APP_TESTS_GUI_DIR ${APPS_DIR}/tests/gui)
+    include(${APP_TESTS_GUI_DIR}/app.cmake APP_TESTS_GUI_DIR)
+    set(APP_TESTS_GENGINE_DIR ${APPS_DIR}/tests/gengine)
+    include(${APP_TESTS_GENGINE_DIR}/app.cmake APP_TESTS_GENGINE_DIR)
+    set(APP_TESTS_CRYPTO_DIR ${APPS_DIR}/tests/crypto)
+    include(${APP_TESTS_CRYPTO_DIR}/app.cmake APP_TESTS_CRYPTO_DIR)
+    set(APP_TESTS_CLI_DIR ${APPS_DIR}/tests/cli)
+    include(${APP_TESTS_CLI_DIR}/app.cmake APP_TESTS_CLI_DIR)
+endif()
 
 message(STATUS "Build system loaded")
