--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ if (NOT CONFIGURED_ONCE)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g0 -std=c++17")
     set(ROOT_DIR ${CMAKE_SOURCE_DIR}/..)
     set(BUILD_DIR ${ROOT_DIR}/build)
-    set(MODULES_DIR ${ROOT_DIR}/module)
+    set(MODULES_DIR ${ROOT_DIR}/modules)
     set(APPS_DIR ${ROOT_DIR}/apps)
     if(CMAKE_BUILD_TYPE MATCHES Debug)
         set(LIBRARY_OUTPUT_PATH ${ROOT_DIR}/bin/dbg)
