Update flag for apps building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ include(${MODULE_GENGINE_VULKAN_DIR}/module.cmake MODULE_GENGINE_VULKAN_DIR)
 set(MODULE_GENGINE_DIRECT3D_DIR ${MODULES_DIR}/gengine/direct3d)
 include(${MODULE_GENGINE_DIRECT3D_DIR}/module.cmake MODULE_GENGINE_DIRECT3D_DIR)
 
-if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_APPS))
+if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
     set(APP_TESTS_TLIB_DIR ${APPS_DIR}/tests/tlib)
     include(${APP_TESTS_TLIB_DIR}/app.cmake APP_TESTS_TLIB_DIR)
     set(APP_TESTS_GUI_DIR ${APPS_DIR}/tests/gui)
