Fix documentation build target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,19 +79,17 @@ if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
     include(${APP_TESTS_MATH_DIR}/app.cmake APP_TESTS_MATH_DIR)
 endif()
 
-if(AURORA_BUILD_DOCS)
-    FIND_PACKAGE(Doxygen REQUIRED)
+FIND_PACKAGE(Doxygen)
 
-    IF (DOXYGEN_FOUND)
-        SET(DOXYGEN_INPUT ${ROOT_DIR}/docs/Doxyfile)
-        SET(DOXYGEN_OUTPUT ${ROOT_DIR}/docs/)
+IF (DOXYGEN_FOUND)
+    SET(DOXYGEN_INPUT ${ROOT_DIR}/docs/Doxyfile)
+    SET(DOXYGEN_OUTPUT ${ROOT_DIR}/docs/)
 
-        ADD_CUSTOM_TARGET(documentation
-                          COMMAND ${CMAKE_COMMAND} -E echo_append "Building Documentation..."
-                          COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_INPUT}
-                          COMMAND ${CMAKE_COMMAND} -E echo "Done."
-                          WORKING_DIRECTORY ${DOXYGEN_OUTPUT})
-    ENDIF (DOXYGEN_FOUND)
-endif()
+    ADD_CUSTOM_TARGET(documentation
+                      COMMAND ${CMAKE_COMMAND} -E echo_append "Building Documentation..."
+                      COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_INPUT}
+                      COMMAND ${CMAKE_COMMAND} -E echo "Done."
+                      WORKING_DIRECTORY ${DOXYGEN_OUTPUT})
+ENDIF (DOXYGEN_FOUND)
 
 message(STATUS "Build system loaded")
