Update build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,80 +10,82 @@ cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
 project (aurorafw)
 
 message(STATUS "Starting framework build system...")
-message("┌─┐┬ ┬┬─┐┌─┐┬─┐┌─┐  ┌─┐┬─┐┌─┐┌┬┐┌─┐┬ ┬┌─┐┬─┐┬┌─ | Powerful, Scalable and Cross Platform Framework")
-message("├─┤│ │├┬┘│ │├┬┘├─┤  ├┤ ├┬┘├─┤│││├┤ ││││ │├┬┘├┴┐ | @author Luís Ferreira")
-message("┴ ┴└─┘┴└─└─┘┴└─┴ ┴  └  ┴└─┴ ┴┴ ┴└─┘└┴┘└─┘┴└─┴ ┴ | @license GNU Public License v3")
+message("┌─┐┬ ┬┬─┐┌─┐┬─┐┌─┐  ┌─┐┬─┐┌─┐┌┬┐┌─┐┬ ┬┌─┐┬─┐┬┌─")
+message("├─┤│ │├┬┘│ │├┬┘├─┤  ├┤ ├┬┘├─┤│││├┤ ││││ │├┬┘├┴┐")
+message("┴ ┴└─┘┴└─└─┘┴└─┴ ┴  └  ┴└─┴ ┴┴ ┴└─┘└┴┘└─┘┴└─┴ ┴")
+message("A Powerful General Purpose Framework")
+message("More information in: https://aurora-fw.github.io/\n")
 
 #General Flags
 if (NOT CONFIGURED_ONCE)
     add_definitions(-DAURORA_IS_COMPILING)
     set_property(GLOBAL PROPERTY CXX_STANDARD 17)
     set_property(GLOBAL PROPERTY CXX_STANDARD_REQUIRED ON)
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og -g3 -Wall -Wextra -w -std=c++17")
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g0 -std=c++17")
-    set(ROOT_DIR ${CMAKE_SOURCE_DIR}/..)
-    set(BUILD_DIR ${ROOT_DIR}/build)
-    set(MODULES_DIR ${ROOT_DIR}/modules)
-    set(APPS_DIR ${ROOT_DIR}/apps)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og -g3 -Wall -Wextra -Weffc++ -Wformat -pedantic -Wchkp -Wdouble-promotion -std=c++17")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g0 -Werror -std=c++17")
+    set(AURORAFW_ROOT_DIR ${CMAKE_SOURCE_DIR}/..)
+    set(AURORAFW_BUILD_DIR ${AURORAFW_ROOT_DIR}/build)
+    set(AURORAFW_MODULES_DIR ${AURORAFW_ROOT_DIR}/modules)
+    set(APPS_DIR ${AURORAFW_ROOT_DIR}/apps)
     if(CMAKE_BUILD_TYPE MATCHES Debug)
-        set(LIBRARY_OUTPUT_PATH ${ROOT_DIR}/bin/dbg)
-        set(EXECUTABLE_OUTPUT_PATH ${ROOT_DIR}/bin/dbg)
+        set(LIBRARY_OUTPUT_PATH ${AURORAFW_ROOT_DIR}/bin/dbg)
+        set(EXECUTABLE_OUTPUT_PATH ${AURORAFW_ROOT_DIR}/bin/dbg)
     else()
-        set(LIBRARY_OUTPUT_PATH ${ROOT_DIR}/bin)
-        set(EXECUTABLE_OUTPUT_PATH ${ROOT_DIR}/bin)
+        set(LIBRARY_OUTPUT_PATH ${AURORAFW_ROOT_DIR}/bin)
+        set(EXECUTABLE_OUTPUT_PATH ${AURORAFW_ROOT_DIR}/bin)
     endif()
 endif()
 
-include_directories(${BUILD_DIR}/include)
+include_directories(${AURORAFW_BUILD_DIR}/include)
 
 # Modules
-set(MODULE_MATH_DIR ${MODULES_DIR}/math)
-include(${MODULE_MATH_DIR}/module.cmake MODULE_MATH_DIR)
-set(MODULE_CRYPTO_DIR ${MODULES_DIR}/crypto)
-include(${MODULE_CRYPTO_DIR}/module.cmake MODULE_CRYPTO_DIR)
-set(MODULE_TLIB_DIR ${MODULES_DIR}/tlib)
-include(${MODULE_TLIB_DIR}/module.cmake MODULE_TLIB_DIR)
-set(MODULE_IO_DIR ${MODULES_DIR}/io)
-include(${MODULE_IO_DIR}/module.cmake MODULE_IO_DIR)
-set(MODULE_CLI_DIR ${MODULES_DIR}/cli)
-include(${MODULE_CLI_DIR}/module.cmake MODULE_CLI_DIR)
-set(MODULE_GUI_DIR ${MODULES_DIR}/gui)
-include(${MODULE_GUI_DIR}/module.cmake MODULE_GUI_DIR)
-set(MODULE_CORE_DIR ${MODULES_DIR}/core)
-include(${MODULE_CORE_DIR}/module.cmake MODULE_CORE_DIR)
-set(MODULE_AUDIO_DIR ${MODULES_DIR}/audio)
-include(${MODULE_AUDIO_DIR}/module.cmake MODULE_AUDIO_DIR)
+set(AURORAFW_MODULE_MATH_DIR ${AURORAFW_MODULES_DIR}/math)
+include(${AURORAFW_MODULE_MATH_DIR}/module.cmake AURORAFW_MODULE_MATH_DIR)
+set(AURORAFW_MODULE_CRYPTO_DIR ${AURORAFW_MODULES_DIR}/crypto)
+include(${AURORAFW_MODULE_CRYPTO_DIR}/module.cmake AURORAFW_MODULE_CRYPTO_DIR)
+set(AURORAFW_MODULE_TLIB_DIR ${AURORAFW_MODULES_DIR}/tlib)
+include(${AURORAFW_MODULE_TLIB_DIR}/module.cmake AURORAFW_MODULE_TLIB_DIR)
+set(AURORAFW_MODULE_IO_DIR ${AURORAFW_MODULES_DIR}/io)
+include(${AURORAFW_MODULE_IO_DIR}/module.cmake AURORAFW_MODULE_IO_DIR)
+set(AURORAFW_MODULE_CLI_DIR ${AURORAFW_MODULES_DIR}/cli)
+include(${AURORAFW_MODULE_CLI_DIR}/module.cmake AURORAFW_MODULE_CLI_DIR)
+set(AURORAFW_MODULE_GUI_DIR ${AURORAFW_MODULES_DIR}/gui)
+include(${AURORAFW_MODULE_GUI_DIR}/module.cmake AURORAFW_MODULE_GUI_DIR)
+set(AURORAFW_MODULE_CORE_DIR ${AURORAFW_MODULES_DIR}/core)
+include(${AURORAFW_MODULE_CORE_DIR}/module.cmake AURORAFW_MODULE_CORE_DIR)
+set(AURORAFW_MODULE_AUDIO_DIR ${AURORAFW_MODULES_DIR}/audio)
+include(${AURORAFW_MODULE_AUDIO_DIR}/module.cmake AURORAFW_MODULE_AUDIO_DIR)
 
 #Graphics Engine
-set(MODULE_GENGINE_CORE_DIR ${MODULES_DIR}/gengine/core)
-include(${MODULE_GENGINE_CORE_DIR}/module.cmake MODULE_GENGINE_CORE_DIR)
-set(MODULE_GENGINE_OPENGL_DIR ${MODULES_DIR}/gengine/opengl)
-include(${MODULE_GENGINE_OPENGL_DIR}/module.cmake MODULE_GENGINE_OPENGL_DIR)
-set(MODULE_GENGINE_VULKAN_DIR ${MODULES_DIR}/gengine/vulkan)
-include(${MODULE_GENGINE_VULKAN_DIR}/module.cmake MODULE_GENGINE_VULKAN_DIR)
-set(MODULE_GENGINE_DIRECT3D_DIR ${MODULES_DIR}/gengine/direct3d)
-include(${MODULE_GENGINE_DIRECT3D_DIR}/module.cmake MODULE_GENGINE_DIRECT3D_DIR)
+set(AURORAFW_MODULE_GENGINE_CORE_DIR ${AURORAFW_MODULES_DIR}/gengine/core)
+include(${AURORAFW_MODULE_GENGINE_CORE_DIR}/module.cmake AURORAFW_MODULE_GENGINE_CORE_DIR)
+set(AURORAFW_MODULE_GENGINE_OPENGL_DIR ${AURORAFW_MODULES_DIR}/gengine/opengl)
+include(${AURORAFW_MODULE_GENGINE_OPENGL_DIR}/module.cmake AURORAFW_MODULE_GENGINE_OPENGL_DIR)
+set(AURORAFW_MODULE_GENGINE_VULKAN_DIR ${AURORAFW_MODULES_DIR}/gengine/vulkan)
+include(${AURORAFW_MODULE_GENGINE_VULKAN_DIR}/module.cmake AURORAFW_MODULE_GENGINE_VULKAN_DIR)
+set(AURORAFW_MODULE_GENGINE_DIRECT3D_DIR ${AURORAFW_MODULES_DIR}/gengine/direct3d)
+include(${AURORAFW_MODULE_GENGINE_DIRECT3D_DIR}/module.cmake AURORAFW_MODULE_GENGINE_DIRECT3D_DIR)
 
 if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
-    set(APP_TESTS_TLIB_DIR ${APPS_DIR}/tests/tlib)
-    include(${APP_TESTS_TLIB_DIR}/app.cmake APP_TESTS_TLIB_DIR)
-    set(APP_TESTS_GUI_DIR ${APPS_DIR}/tests/gui)
-    include(${APP_TESTS_GUI_DIR}/app.cmake APP_TESTS_GUI_DIR)
-    set(APP_TESTS_GENGINE_DIR ${APPS_DIR}/tests/gengine)
-    include(${APP_TESTS_GENGINE_DIR}/app.cmake APP_TESTS_GENGINE_DIR)
-    set(APP_TESTS_CRYPTO_DIR ${APPS_DIR}/tests/crypto)
-    include(${APP_TESTS_CRYPTO_DIR}/app.cmake APP_TESTS_CRYPTO_DIR)
-    set(APP_TESTS_CLI_DIR ${APPS_DIR}/tests/cli)
-    include(${APP_TESTS_CLI_DIR}/app.cmake APP_TESTS_CLI_DIR)
-    set(APP_TESTS_MATH_DIR ${APPS_DIR}/tests/math)
-    include(${APP_TESTS_MATH_DIR}/app.cmake APP_TESTS_MATH_DIR)
+    set(AURORAFW_APP_TESTS_TLIB_DIR ${APPS_DIR}/tests/tlib)
+    include(${AURORAFW_APP_TESTS_TLIB_DIR}/app.cmake AURORAFW_APP_TESTS_TLIB_DIR)
+    set(AURORAFW_APP_TESTS_GUI_DIR ${APPS_DIR}/tests/gui)
+    include(${AURORAFW_APP_TESTS_GUI_DIR}/app.cmake AURORAFW_APP_TESTS_GUI_DIR)
+    set(AURORAFW_APP_TESTS_GENGINE_DIR ${APPS_DIR}/tests/gengine)
+    include(${AURORAFW_APP_TESTS_GENGINE_DIR}/app.cmake AURORAFW_APP_TESTS_GENGINE_DIR)
+    set(AURORAFW_APP_TESTS_CRYPTO_DIR ${APPS_DIR}/tests/crypto)
+    include(${AURORAFW_APP_TESTS_CRYPTO_DIR}/app.cmake AURORAFW_APP_TESTS_CRYPTO_DIR)
+    set(AURORAFW_APP_TESTS_CLI_DIR ${APPS_DIR}/tests/cli)
+    include(${AURORAFW_APP_TESTS_CLI_DIR}/app.cmake AURORAFW_APP_TESTS_CLI_DIR)
+    set(AURORAFW_APP_TESTS_MATH_DIR ${APPS_DIR}/tests/math)
+    include(${AURORAFW_APP_TESTS_MATH_DIR}/app.cmake AURORAFW_APP_TESTS_MATH_DIR)
 endif()
 
 FIND_PACKAGE(Doxygen)
 
 IF (DOXYGEN_FOUND)
-    SET(DOXYGEN_INPUT ${ROOT_DIR}/docs/Doxyfile)
-    SET(DOXYGEN_OUTPUT ${ROOT_DIR}/docs/)
+    SET(DOXYGEN_INPUT ${AURORAFW_ROOT_DIR}/docs/Doxyfile)
+    SET(DOXYGEN_OUTPUT ${AURORAFW_ROOT_DIR}/docs/)
 
     ADD_CUSTOM_TARGET(documentation
                       COMMAND ${CMAKE_COMMAND} -E echo_append "Building Documentation..."
