--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ if (NOT CONFIGURED_ONCE)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g0 -Werror -std=c++17")
 
     #Aurora specific flags
-    set(AURORAFW_ROOT_DIR ${CMAKE_SOURCE_DIR}/..)
+    set(AURORAFW_ROOT_DIR ${CMAKE_SOURCE_DIR})
     set(AURORAFW_BUILD_DIR ${AURORAFW_ROOT_DIR}/build)
     set(AURORAFW_MODULES_DIR ${AURORAFW_ROOT_DIR}/modules)
     set(AURORAFW_APPS_DIR ${AURORAFW_ROOT_DIR}/apps)
