Add netsocks module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,8 @@ set(AURORAFW_MODULE_CORE_DIR ${AURORAFW_MODULES_DIR}/core)
 include(${AURORAFW_MODULE_CORE_DIR}/module.cmake AURORAFW_MODULE_CORE_DIR)
 set(AURORAFW_MODULE_AUDIO_DIR ${AURORAFW_MODULES_DIR}/audio)
 include(${AURORAFW_MODULE_AUDIO_DIR}/module.cmake AURORAFW_MODULE_AUDIO_DIR)
+set(AURORAFW_MODULE_NETSOCKS_DIR ${AURORAFW_MODULES_DIR}/netsocks)
+include(${AURORAFW_MODULE_NETSOCKS_DIR}/module.cmake AURORAFW_MODULE_NETSOCKS_DIR)
 
 #Graphics Engine
 set(AURORAFW_MODULE_GENGINE_CORE_DIR ${AURORAFW_MODULES_DIR}/gengine/core)
