Update netsocks test apps structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,10 +99,8 @@ if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
     include(${AURORAFW_APP_TESTS_CLI_DIR}/app.cmake AURORAFW_APP_TESTS_CLI_DIR)
     set(AURORAFW_APP_TESTS_MATH_DIR ${AURORAFW_APPS_DIR}/tests/math)
     include(${AURORAFW_APP_TESTS_MATH_DIR}/app.cmake AURORAFW_APP_TESTS_MATH_DIR)
-    set(AURORAFW_APP_TESTS_NETSOCKS_CLIENT_DIR ${AURORAFW_APPS_DIR}/tests/netsocks/client)
-    include(${AURORAFW_APP_TESTS_NETSOCKS_CLIENT_DIR}/app.cmake AURORAFW_APP_TESTS_NETSOCKS_CLIENT_DIR)
-    set(AURORAFW_APP_TESTS_NETSOCKS_SERVER_DIR ${AURORAFW_APPS_DIR}/tests/netsocks/server)
-    include(${AURORAFW_APP_TESTS_NETSOCKS_SERVER_DIR}/app.cmake AURORAFW_APP_TESTS_NETSOCKS_SERVER_DIR)
+    set(AURORAFW_APP_TESTS_NETSOCKS_CLIENT_DIR ${AURORAFW_APPS_DIR}/tests/netsocks)
+    include(${AURORAFW_APP_TESTS_NETSOCKS_CLIENT_DIR}/app.cmake AURORAFW_APP_TESTS_NETSOCKS_DIR)
 endif()
 
 #Doxygen specific configuration
