Update build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,50 +63,50 @@ include_directories(${AURORAFW_BUILD_DIR}/include)
 
 # Modules
 set(AURORAFW_MODULE_MATH_DIR ${AURORAFW_MODULES_DIR}/math)
-include(${AURORAFW_MODULE_MATH_DIR}/module.cmake AURORAFW_MODULE_MATH_DIR)
+include(${AURORAFW_MODULE_MATH_DIR}/module.cmake)
 set(AURORAFW_MODULE_CRYPTO_DIR ${AURORAFW_MODULES_DIR}/crypto)
-include(${AURORAFW_MODULE_CRYPTO_DIR}/module.cmake AURORAFW_MODULE_CRYPTO_DIR)
+include(${AURORAFW_MODULE_CRYPTO_DIR}/module.cmake)
 set(AURORAFW_MODULE_TLIB_DIR ${AURORAFW_MODULES_DIR}/tlib)
-include(${AURORAFW_MODULE_TLIB_DIR}/module.cmake AURORAFW_MODULE_TLIB_DIR)
+include(${AURORAFW_MODULE_TLIB_DIR}/module.cmake)
 set(AURORAFW_MODULE_IO_DIR ${AURORAFW_MODULES_DIR}/io)
-include(${AURORAFW_MODULE_IO_DIR}/module.cmake AURORAFW_MODULE_IO_DIR)
+include(${AURORAFW_MODULE_IO_DIR}/module.cmake)
 set(AURORAFW_MODULE_CLI_DIR ${AURORAFW_MODULES_DIR}/cli)
-include(${AURORAFW_MODULE_CLI_DIR}/module.cmake AURORAFW_MODULE_CLI_DIR)
+include(${AURORAFW_MODULE_CLI_DIR}/module.cmake)
 set(AURORAFW_MODULE_GUI_DIR ${AURORAFW_MODULES_DIR}/gui)
-include(${AURORAFW_MODULE_GUI_DIR}/module.cmake AURORAFW_MODULE_GUI_DIR)
+include(${AURORAFW_MODULE_GUI_DIR}/module.cmake)
 set(AURORAFW_MODULE_CORE_DIR ${AURORAFW_MODULES_DIR}/core)
-include(${AURORAFW_MODULE_CORE_DIR}/module.cmake AURORAFW_MODULE_CORE_DIR)
+include(${AURORAFW_MODULE_CORE_DIR}/module.cmake)
 set(AURORAFW_MODULE_AUDIO_DIR ${AURORAFW_MODULES_DIR}/audio)
-include(${AURORAFW_MODULE_AUDIO_DIR}/module.cmake AURORAFW_MODULE_AUDIO_DIR)
+include(${AURORAFW_MODULE_AUDIO_DIR}/module.cmake)
 set(AURORAFW_MODULE_NETSOCKS_DIR ${AURORAFW_MODULES_DIR}/netsocks)
-include(${AURORAFW_MODULE_NETSOCKS_DIR}/module.cmake AURORAFW_MODULE_NETSOCKS_DIR)
+include(${AURORAFW_MODULE_NETSOCKS_DIR}/module.cmake)
 
 #Graphics Engine
 set(AURORAFW_MODULE_GENGINE_CORE_DIR ${AURORAFW_MODULES_DIR}/gengine/core)
-include(${AURORAFW_MODULE_GENGINE_CORE_DIR}/module.cmake AURORAFW_MODULE_GENGINE_CORE_DIR)
+include(${AURORAFW_MODULE_GENGINE_CORE_DIR}/module.cmake)
 set(AURORAFW_MODULE_GENGINE_OPENGL_DIR ${AURORAFW_MODULES_DIR}/gengine/opengl)
-include(${AURORAFW_MODULE_GENGINE_OPENGL_DIR}/module.cmake AURORAFW_MODULE_GENGINE_OPENGL_DIR)
+include(${AURORAFW_MODULE_GENGINE_OPENGL_DIR}/module.cmake)
 set(AURORAFW_MODULE_GENGINE_VULKAN_DIR ${AURORAFW_MODULES_DIR}/gengine/vulkan)
-include(${AURORAFW_MODULE_GENGINE_VULKAN_DIR}/module.cmake AURORAFW_MODULE_GENGINE_VULKAN_DIR)
+include(${AURORAFW_MODULE_GENGINE_VULKAN_DIR}/module.cmake)
 set(AURORAFW_MODULE_GENGINE_DIRECT3D_DIR ${AURORAFW_MODULES_DIR}/gengine/direct3d)
-include(${AURORAFW_MODULE_GENGINE_DIRECT3D_DIR}/module.cmake AURORAFW_MODULE_GENGINE_DIRECT3D_DIR)
+include(${AURORAFW_MODULE_GENGINE_DIRECT3D_DIR}/module.cmake)
 
 #Test Apps
 if((CMAKE_BUILD_TYPE MATCHES Debug) AND (AURORA_BUILD_TEST_APPS))
     set(AURORAFW_APP_TESTS_TLIB_DIR ${AURORAFW_APPS_DIR}/tests/tlib)
-    include(${AURORAFW_APP_TESTS_TLIB_DIR}/app.cmake AURORAFW_APP_TESTS_TLIB_DIR)
+    include(${AURORAFW_APP_TESTS_TLIB_DIR}/app.cmake)
     set(AURORAFW_APP_TESTS_GUI_DIR ${AURORAFW_APPS_DIR}/tests/gui)
-    include(${AURORAFW_APP_TESTS_GUI_DIR}/app.cmake AURORAFW_APP_TESTS_GUI_DIR)
+    include(${AURORAFW_APP_TESTS_GUI_DIR}/app.cmake)
     set(AURORAFW_APP_TESTS_GENGINE_DIR ${AURORAFW_APPS_DIR}/tests/gengine)
-    include(${AURORAFW_APP_TESTS_GENGINE_DIR}/app.cmake AURORAFW_APP_TESTS_GENGINE_DIR)
+    include(${AURORAFW_APP_TESTS_GENGINE_DIR}/app.cmake)
     set(AURORAFW_APP_TESTS_CRYPTO_DIR ${AURORAFW_APPS_DIR}/tests/crypto)
-    include(${AURORAFW_APP_TESTS_CRYPTO_DIR}/app.cmake AURORAFW_APP_TESTS_CRYPTO_DIR)
+    include(${AURORAFW_APP_TESTS_CRYPTO_DIR}/app.cmake)
     set(AURORAFW_APP_TESTS_CLI_DIR ${AURORAFW_APPS_DIR}/tests/cli)
-    include(${AURORAFW_APP_TESTS_CLI_DIR}/app.cmake AURORAFW_APP_TESTS_CLI_DIR)
+    include(${AURORAFW_APP_TESTS_CLI_DIR}/app.cmake)
     set(AURORAFW_APP_TESTS_MATH_DIR ${AURORAFW_APPS_DIR}/tests/math)
-    include(${AURORAFW_APP_TESTS_MATH_DIR}/app.cmake AURORAFW_APP_TESTS_MATH_DIR)
+    include(${AURORAFW_APP_TESTS_MATH_DIR}/app.cmake)
     set(AURORAFW_APP_TESTS_NETSOCKS_DIR ${AURORAFW_APPS_DIR}/tests/netsocks)
-    include(${AURORAFW_APP_TESTS_NETSOCKS_DIR}/app.cmake AURORAFW_APP_TESTS_NETSOCKS_DIR)
+    include(${AURORAFW_APP_TESTS_NETSOCKS_DIR}/app.cmake)
 endif()
 
 if(AURORA_TARGET_DOCUMENTATION)
