Update build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,10 +38,14 @@ if (NOT CONFIGURED_ONCE)
     #C++ 17 Standard Revision
     set_property(GLOBAL PROPERTY CXX_STANDARD 17)
     set_property(GLOBAL PROPERTY CXX_STANDARD_REQUIRED ON)
-    #Add custom flags to the CXX compiler
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og -g3 -Wall -Wextra -Wformat -pedantic -Wchkp -Wdouble-promotion -std=c++17")
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g0 -Werror -std=c++17")
-
+    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+        #Add custom flags to the CXX compiler
+        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og -g3 -Wall -Wextra -Wformat -pedantic -Wdouble-promotion -std=c++17")
+        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g0 -Werror -std=c++17")
+    elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og -g3 -Wall -Wextra -Wformat -pedantic -Wdouble-promotion -std=c++1z")
+        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g0 -Werror -std=c++1z")
+    endif()
     #Aurora specific flags
     set(AURORAFW_ROOT_DIR ${CMAKE_SOURCE_DIR})
     set(AURORAFW_BUILD_DIR ${AURORAFW_ROOT_DIR}/build)
