Added new Image module to build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ set(AURORAFW_MODULE_AUDIO_DIR ${AURORAFW_MODULES_DIR}/audio)
 include(${AURORAFW_MODULE_AUDIO_DIR}/module.cmake)
 set(AURORAFW_MODULE_NETSOCKS_DIR ${AURORAFW_MODULES_DIR}/netsocks)
 include(${AURORAFW_MODULE_NETSOCKS_DIR}/module.cmake)
+set(AURORAFW_MODULE_IMAGE_DIR ${AURORAFW_MODULES_DIR}/image)
+include(${AURORAFW_MODULE_IMAGE_DIR}/module.cmake)
 
 #Graphics Engine
 set(AURORAFW_MODULE_GENGINE_CORE_DIR ${AURORAFW_MODULES_DIR}/gengine/core)
@@ -77,6 +79,8 @@ if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
 	include(${AURORAFW_APP_TESTS_MATH_DIR}/app.cmake)
 	set(AURORAFW_APP_TESTS_NETSOCKS_DIR ${AURORAFW_APPS_DIR}/tests/netsocks)
 	include(${AURORAFW_APP_TESTS_NETSOCKS_DIR}/app.cmake)
+	set(AURORAFW_APP_TESTS_IMAGE_DIR ${AURORAFW_APPS_DIR}/tests/image)
+	include(${AURORAFW_APP_TESTS_IMAGE_DIR}/app.cmake)
 endif()
 
 #Doxygen specific configuration
