Added new app-tests-audio to build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,8 @@ include(${AURORAFW_MODULE_GENGINE_DIRECT3D_DIR}/module.cmake)
 
 #Test Apps
 if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
+	set(AURORAFW_APP_TESTS_AUDIO_DIR ${AURORAFW_APPS_DIR}/tests/audio)
+	include(${AURORAFW_APP_TESTS_AUDIO_DIR}/app.cmake)
 	set(AURORAFW_APP_TESTS_STDL_DIR ${AURORAFW_APPS_DIR}/tests/tlib)
 	include(${AURORAFW_APP_TESTS_STDL_DIR}/app.cmake)
 	set(AURORAFW_APP_TESTS_GUI_DIR ${AURORAFW_APPS_DIR}/tests/gui)
